@@ -1,4 +1,6 @@
 DIST PacketTracer521.tar.gz 93357690 RMD160 7b5d73104a3d2490cf87726cb1583e4218cdd437 SHA1 3a345fcba05fdecb825259762e841cb5dbe99720 SHA256 86d751139575bdd904698a059167adc0d88c954dde846ae642fe7ad37f51932e
+DIST PacketTracer5218.tar.gz 93383990 RMD160 902754249975a05c3c68a136284e131584589efb SHA1 31d8d3721aa23fa0ee7eb93af88403f01f20ea6e SHA256 2493256aa0145a72512a76dc79c17bc99da175075ca44aad44ca618dff155e65
 EBUILD packettracer-521-r3.ebuild 2697 RMD160 93b7f777bb8b346e0dce1233cda5dee62e791164 SHA1 38ee12ea284dc89e3530d3302fb9913e9742a410 SHA256 bd418b02789372533c56d5baf12ebe522c4490791c2f8da979f780843c0c8def
-MISC ChangeLog 2497 RMD160 91ffc689ae5bf82a1c9291f77f257b1575d51a6d SHA1 608d30c766d0c2cad8180f6120c238019251c6ef SHA256 d0e598c141659b83a3f47f1576d4d7e1958952709c967232c4a1f6c1d1380eb4
+EBUILD packettracer-5218.ebuild 2697 RMD160 93b7f777bb8b346e0dce1233cda5dee62e791164 SHA1 38ee12ea284dc89e3530d3302fb9913e9742a410 SHA256 bd418b02789372533c56d5baf12ebe522c4490791c2f8da979f780843c0c8def
+MISC ChangeLog 2639 RMD160 22c158016a84316105f95126d1d56ac5635e1081 SHA1 f27092959c2f8b204da91bca9e174330d5e7c9d3 SHA256 94e6cf9259203a9a9243380777ce1015072ce979239dd13d85174ecf5ca2aeb7
 MISC metadata.xml 604 RMD160 d1b88107696f095f674c79d5b4512302af968eb1 SHA1 c91467f615e608f09b68048fa9bd1ecdb8975aae SHA256 de013db7d9e6f363aa6b0f79e967ddb646a10042eb673075dc905417f4d021c3
