@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*packettracer-5218 ( 11 Jun 2010 )
+
+  11 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +packettracer-5218.ebuild:
+  minor version update
+
   05 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   -packettracer-521-r2.ebuild:
   drop old packettracer ebuild
